fuckin added mondays, tuesday and wednesdays to the mad stuff ( for real thought javascript arrays are now used to populate data for streets )

--- a/web/source/index.html.haml
+++ b/web/source/index.html.haml
@@ -7,7 +7,7 @@ title: Home
       <i class="fa fa-arrow-left fa-lg"></i> 
   .col-10.border-box#silva
     %h2.center Silver Street
-    .data_box.rounded.p2.px3
+    .data_box.rounded.p2.px3#silva_data
       .vbox.my2
         .flex.justify-between
           .day
@@ -28,7 +28,7 @@ title: Home
 
   .col-10.border-box#x
     %h2.center X Street
-    .data_box.rounded.p2.px3
+    .data_box.rounded.p2.px3#x_data
       .vbox.my2
         .flex.justify-between
           .day
