--- a/web/source/layouts/layout.haml
+++ b/web/source/layouts/layout.haml
@@ -26,5 +26,5 @@
     .content
       =yield
 
-    .explanation
-      %p This was a project for Durhack 2016 which predicts footfall based on weather data.
+    .explanation.p2.mt3
+      %p.center This was a project for Durhack 2016 which predicts footfall based on weather data.
