--- a/web/source/stylesheets/site.css.scss
+++ b/web/source/stylesheets/site.css.scss
@@ -25,3 +25,9 @@ html, body {
 .data_box {
   background-color:#DDDDDD;
 }
+
+.explanation {
+  color:white;
+  background-color:#8f1b00;
+  height:100vh;
+}
