--- a/web/source/index.html.haml
+++ b/web/source/index.html.haml
@@ -5,47 +5,19 @@ title: Home
   .larrow.col-1.border-box{:onclick => "left()"}
     .left_arrow.py4.px1.left
       <i class="fa fa-arrow-left fa-lg"></i> 
-  .col-10.border-box#silva
-    %h2.center Silver Street
-    .data_box.rounded.p2.px3#silva_data
-      .vbox.my2
-        .flex.justify-between
-          .day
-            Monday 1st
-          .weather
-            <i class="fa fa-sun-o fa-lg"></i> 22 C
-          .footfall
-            2000 <i class="fa fa-users fa-lg"></i> (200)
 
-      .vbox.my2
-        .flex.justify-between
-          .day
-            Tuesday 2nd
-          .weather
-            <i class="fa fa-sun-o fa-lg"></i>  22 C
-          .footfall
-            2000 <i class="fa fa-users fa-lg"></i> (200)
-
-  .col-10.border-box#x
-    %h2.center X Street
-    .data_box.rounded.p2.px3#x_data
-      .vbox.my2
-        .flex.justify-between
-          .day
-            Monday 1st
-          .weather
-            <i class="fa fa-sun-o fa-lg"></i> 22 C
-          .footfall
-            2000 <i class="fa fa-users fa-lg"></i> (200)
-
-      .vbox.my2
-        .flex.justify-between
-          .day
-            Tuesday 2nd
-          .weather
-            <i class="fa fa-sun-o fa-lg"></i>  22 C
-          .footfall
-            2000 <i class="fa fa-users fa-lg"></i> (200)
+  - data.streets.each do |street|
+    .col-10.border-box{:id => street.id}
+      %h2.center= street.name
+      .data_box.rounded.p2.px3{:id => street.id + "_data"}
+        - street.days.each do |day|
+          .vbox.my2
+            .flex.justify-between
+              .day
+                .day_name= day.dayname
+              .weather= day.temp
+              .footfall
+                ="%5.0f (%0.3f)" % [day.footfall, day.modifier]
 
   .rarrow.col-1.border-box{:onclick => "right()"}
     .right_arrow.py4.px1.right
