--- a/web/source/layouts/layout.haml
+++ b/web/source/layouts/layout.haml
@@ -20,7 +20,7 @@
       .header_txt.mx-auto.center
         =image_tag 'logo.svg', :class => "logoimg"
       .header_txt.mx-auto.center
-        %h1 WYFFT
+        %h1 WWYFFT
         
 
     .content
